# rust-cross-build-nix

./: Cargo.toml  Cross.toml  Makefile  README.md  nix.conf
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: r10e-cross-rs-build.yml  r10e-rust-overlay-build.yml
nix-cross-rs/: Cargo.toml  Dockerfile  Makefile  README.md  nixbuild.sh  run.sh  shell.nix
nix-cross-rs/src/: main.rs
nix-rust-overlay/: Dockerfile  Makefile  Makefile.armv7  README.md  musl-1.1.24.patch  run.sh  shell-aarch64.nix  shell-armv6.nix  shell-armv7.nix  shell-i686.nix  shell-x86_64-win.nix  shell-x86_64.nix
src/: main.rs
