[package]
name = "hello-random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.3.14"
# The following commit results in a successful build
zstd = { git = "https://github.com/gyscos/zstd-rs", rev ="56c8b52b6d448e376e746fc062077f68febc03a3" }
# The following commit is immediately after the above one, and breaks cross builds
#zstd = { git = "https://github.com/gyscos/zstd-rs", rev ="f0d8a12f0f520095cf26a0dac35b8d0939277add" }